Created stake page

--- a/css/common.css
+++ b/css/common.css
@@ -40,14 +40,14 @@ ul, ol {
 .body-content-outer {
   padding: 15px; }
 
-.btn-primary {
+.primary-btn {
   background-color: #292D32;
   border-radius: 34px;
   color: #fff;
   font-weight: 500;
   padding: 10px 15px;
   transition: .3s; }
-  .btn-primary:hover {
+  .primary-btn:hover {
     color: #fff;
     opacity: .8; }
 
@@ -156,6 +156,390 @@ button {
 @media (max-width: 767px) {
   .filter-wrapper .filter-nav-btn {
     min-width: 80px;
-    font-size: 13px; } }
+    font-size: 13px; }
+
+  .filter-wrapper .title-search-box .input-group {
+    width: 100%; }
+
+  .sec-title-filter .filter-dropdown-group .filter-dropdown-btn {
+    width: 40px;
+    height: 40px;
+    padding: 0;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center; }
+    .sec-title-filter .filter-dropdown-group .filter-dropdown-btn .filter-label {
+      display: none; }
+
+  .sec-title-filter .title-search-box .input-group {
+    width: 100%;
+    height: 40px; } }
+@media (max-width: 579px) {
+  .stake-title-filter .title-search-box {
+    width: 200px; } }
+@media (max-width: 479px) {
+  .stake-title-filter .title-search-box {
+    width: 200px; }
+
+  .stake-title-filter .title-search-box {
+    width: auto;
+    flex: 1 1 auto; } }
+.sec-title-block {
+  padding-bottom: 15px; }
+  .sec-title-block .sec-title {
+    margin-bottom: 0;
+    font-size: 16px;
+    font-weight: 700;
+    display: flex;
+    align-items: center; }
+  .sec-title-block.sec-title-filter {
+    display: flex;
+    align-items: center;
+    justify-content: space-between; }
+    .sec-title-block.sec-title-filter .block-right {
+      display: flex; }
+  .sec-title-block .create-btn {
+    flex-shrink: 0;
+    padding: 7px 30px;
+    min-width: 180px;
+    font-weight: 400;
+    font-size: 14px; }
+    .sec-title-block .create-btn img {
+      margin-left: 15px; }
+    .sec-title-block .create-btn .add-label-mob {
+      display: none; }
+      .sec-title-block .create-btn .add-label-mob img {
+        margin-left: 0;
+        max-width: 100%; }
+    @media (max-width: 1679px) {
+      .sec-title-block .create-btn {
+        min-width: 140px; } }
+    @media (max-width: 1441px) {
+      .sec-title-block .create-btn {
+        min-width: 120px; } }
+    @media (max-width: 1441px) {
+      .sec-title-block .create-btn {
+        min-width: 100px;
+        padding: 7px 20px; } }
+    @media (max-width: 767px) {
+      .sec-title-block .create-btn {
+        min-width: auto;
+        padding: 0;
+        border: none;
+        border-radius: 50%; }
+        .sec-title-block .create-btn .add-label-mob {
+          display: block; }
+        .sec-title-block .create-btn .add-label-web {
+          display: none; } }
+
+@media (max-width: 479px) {
+  .sec-title-block.sec-title-filter {
+    flex-wrap: wrap; }
+
+  .sec-title-block.sec-title-filter .block-right {
+    width: 100%;
+    padding-top: 15px; } }
+.title-search-box .btn {
+  z-index: 1; }
+.title-search-box .input-group {
+  border-radius: 20px;
+  border: 1px solid #E3E4F3;
+  background: #FFF;
+  height: 40px;
+  width: 320px;
+  padding-right: 15px;
+  overflow: hidden; }
+  .title-search-box .input-group ::-webkit-input-placeholder {
+    color: #ADC3DF; }
+  .title-search-box .input-group :-moz-placeholder {
+    color: #ADC3DF; }
+  .title-search-box .input-group ::-moz-placeholder {
+    color: #ADC3DF; }
+  .title-search-box .input-group :-ms-input-placeholder {
+    color: #ADC3DF; }
+  .title-search-box .input-group .form-control, .title-search-box .input-group .btn {
+    box-shadow: none !important;
+    outline: none !important;
+    border: none !important; }
+  .title-search-box .input-group .form-control {
+    color: #292D32;
+    font-size: 14px;
+    padding-left: 25px; }
+
+@media (max-width: 1679px) {
+  .title-search-box .input-group {
+    height: 38px;
+    width: 280px; } }
+@media (max-width: 1199px) {
+  .title-search-box .input-group {
+    width: 240px;
+    padding-right: 5px; } }
+.inp-block .form-label {
+  width: 100%;
+  color: #697F9B;
+  font-weight: 500;
+  font-size: 12px;
+  margin-bottom: 8px; }
+  .inp-block .form-label sup {
+    top: -3px;
+    font-size: 12px;
+    color: #FC5252; }
+    @media (max-width: 579px) {
+      .inp-block .form-label sup {
+        top: -1px; } }
+.inp-block .custom-inp {
+  box-shadow: none;
+  outline: none;
+  border-radius: 22px;
+  border: 1px solid #E3E4F3;
+  background: #FFF;
+  padding: 10px 24px;
+  color: #7F97B5;
+  font-size: 14px;
+  box-shadow: none; }
+.inp-block .custom-selectbox {
+  background-image: url("../img/select-arrw.svg");
+  background-position: calc(100% - 20px) center;
+  background-repeat: no-repeat; }
+
+.react-custom-select .css-13cymwt-control, .react-custom-select .css-t3ipsp-control {
+  border-radius: 30px;
+  border: 1px solid #E3E4F3;
+  background: #FFF;
+  padding: 10px 24px;
+  color: #7F97B5;
+  font-size: 14px;
+  box-shadow: none; }
+  @media (max-width: 1679px) {
+    .react-custom-select .css-13cymwt-control, .react-custom-select .css-t3ipsp-control {
+      padding: 8px 24px; } }
+  .react-custom-select .css-13cymwt-control .css-hlgwow, .react-custom-select .css-t3ipsp-control .css-hlgwow {
+    padding-left: 0 !important; }
+.react-custom-select.react-custom-select-bg .css-13cymwt-control, .react-custom-select.react-custom-select-bg .css-t3ipsp-control {
+  background: #FFF; }
+.react-custom-select .css-13cymwt-control, .react-custom-select .css-t3ipsp-control {
+  border-color: #E3E4F3 !important; }
+.react-custom-select .custom-inp {
+  padding: 0 !important;
+  border: 0 !important;
+  border-radius: 0 !important; }
+.react-custom-select .css-1u9des2-indicatorSeparator {
+  display: none; }
+.react-custom-select .css-1xc3v61-indicatorContainer {
+  padding-right: 0; }
+
+.react-custom-select-rect .css-13cymwt-control, .react-custom-select-rect .css-t3ipsp-control {
+  border-radius: 8px;
+  border: 1px solid #E3E4F3;
+  background: #FFF;
+  width: 100%;
+  height: 48px;
+  box-shadow: none;
+  font-size: 16px;
+  font-weight: 500;
+  color: #292D32;
+  padding: 0 25px;
+  outline: none; }
+  @media (max-width: 1679px) {
+    .react-custom-select-rect .css-13cymwt-control, .react-custom-select-rect .css-t3ipsp-control {
+      font-size: 15px;
+      height: 44px; } }
+  @media (max-width: 1481px) {
+    .react-custom-select-rect .css-13cymwt-control, .react-custom-select-rect .css-t3ipsp-control {
+      font-size: 14px;
+      padding: 8px 20px; } }
+  @media (max-width: 579px) {
+    .react-custom-select-rect .css-13cymwt-control, .react-custom-select-rect .css-t3ipsp-control {
+      padding: 8px 15px;
+      height: 42px;
+      font-size: 13px; } }
+  .react-custom-select-rect .css-13cymwt-control .css-hlgwow, .react-custom-select-rect .css-t3ipsp-control .css-hlgwow {
+    padding-left: 0 !important; }
+.react-custom-select-rect .css-13cymwt-control, .react-custom-select-rect .css-t3ipsp-control {
+  border-color: #E3E4F3 !important; }
+.react-custom-select-rect .css-1u9des2-indicatorSeparator {
+  display: none; }
+.react-custom-select-rect .css-1xc3v61-indicatorContainer {
+  padding-right: 0; }
+
+.alert-msg-cover {
+  position: relative; }
+  .alert-msg-cover .alert-msg {
+    font-size: 12px;
+    position: absolute;
+    top: 100%;
+    left: 20px;
+    color: #FC5252; }
+    @media (max-width: 579px) {
+      .alert-msg-cover .alert-msg {
+        font-size: 11px; } }
+
+.filter-dropdown-group .filter-dropdown-btn {
+  box-shadow: none;
+  width: 140px;
+  height: 40px;
+  font-size: 14px;
+  padding: 8px 25px;
+  border-radius: 20px;
+  border: 1px solid #E3E4F3 !important;
+  background: #FFF !important;
+  color: #697F9B;
+  justify-content: space-between;
+  display: inline-flex;
+  align-items: center; }
+  .filter-dropdown-group .filter-dropdown-btn::after {
+    display: none; }
+.filter-dropdown-group .filter-dropdown-menu {
+  width: 420px;
+  border-radius: 12px;
+  background-color: #FFF;
+  border: none;
+  box-shadow: 0px 3px 12px 8px rgba(0, 0, 0, 0.06); }
+
+.filter-dropdown-menu {
+  width: 420px;
+  border-radius: 12px;
+  background-color: #FFF;
+  border: none;
+  box-shadow: 0px 3px 12px 8px rgba(0, 0, 0, 0.06); }
+  .filter-dropdown-menu .filter-title {
+    position: relative;
+    border-bottom: solid 1px #E3E4F3;
+    padding: 24px; }
+    .filter-dropdown-menu .filter-title .filter-close-btn {
+      position: absolute;
+      right: 15px;
+      top: 15px;
+      padding: 2px;
+      border: none;
+      line-height: 0;
+      background-color: transparent; }
+    .filter-dropdown-menu .filter-title h4 {
+      font-size: 14px;
+      margin-bottom: 0;
+      font-style: normal;
+      font-weight: 500;
+      color: #292D32; }
+  .filter-dropdown-menu .filter-form-content .custom-input-group {
+    background-color: #fff; }
+  .filter-dropdown-menu .filter-form-content .inp-cover {
+    padding: 25px 50px 30px; }
+  .filter-dropdown-menu .filter-form-content .custom-inp {
+    width: 100%; }
+  .filter-dropdown-menu .filter-form-content .inp-block {
+    margin-bottom: 25px; }
+  .filter-dropdown-menu .filter-form-content .price-range-block {
+    border-radius: 19px;
+    background: #F7F7FC;
+    padding: 20px 25px; }
+    .filter-dropdown-menu .filter-form-content .price-range-block .price-title {
+      color: #697F9B;
+      font-size: 14px;
+      margin-bottom: 15px; }
+      .filter-dropdown-menu .filter-form-content .price-range-block .price-title .value {
+        font-weight: 600;
+        color: #292D32; }
+  .filter-dropdown-menu .filter-form-content .btn-block {
+    border-top: solid 1px #E3E4F3;
+    padding: 25px;
+    text-align: right; }
+    .filter-dropdown-menu .filter-form-content .btn-block .btn {
+      box-shadow: none;
+      min-width: 124px;
+      padding: 8px 15px;
+      text-align: center;
+      border-radius: 20px;
+      transition: .3s; }
+      .filter-dropdown-menu .filter-form-content .btn-block .btn:hover {
+        opacity: .8; }
+      .filter-dropdown-menu .filter-form-content .btn-block .btn.btn-reset {
+        border: 1px solid #292D32;
+        background: #FFF; }
+      .filter-dropdown-menu .filter-form-content .btn-block .btn.btn-save {
+        color: #fff;
+        border: 1px solid #292D32;
+        background: #292D32; }
+
+@media (max-width: 1679px) {
+  .filter-dropdown-group .filter-dropdown-btn {
+    height: 38px; }
+
+  .filter-dropdown-menu .filter-title {
+    padding: 15px 20px; }
+
+  .filter-dropdown-menu .filter-title .filter-close-btn {
+    top: 5px; }
+
+  .filter-dropdown-menu .filter-form-content .inp-cover {
+    padding: 20px 40px 25px; }
+
+  .filter-dropdown-menu .filter-form-content .inp-block {
+    margin-bottom: 20px; }
+
+  .filter-dropdown-menu .filter-form-content .btn-block .btn {
+    font-size: 15px;
+    min-width: 110px;
+    padding: 7px 15px; }
+
+  .filter-dropdown-menu .filter-form-content .price-range-block .price-title {
+    font-size: 13px; }
+
+  .filter-dropdown-menu .filter-form-content .btn-block {
+    padding: 15px 25px; }
+
+  .filter-dropdown-menu .react-custom-select .css-13cymwt-control,
+  .filter-dropdown-menu .react-custom-select .css-t3ipsp-control {
+    height: 52px; } }
+@media (max-width: 1481px) {
+  .filter-dropdown-menu .react-custom-select .css-13cymwt-control,
+  .filter-dropdown-menu .react-custom-select .css-t3ipsp-control {
+    padding: 5px 18px;
+    height: 46px;
+    font-size: 13px; }
+
+  .filter-dropdown-menu .filter-form-content .inp-block {
+    margin-bottom: 15px; } }
+@media (max-width: 1199px) {
+  .filter-dropdown-group .filter-dropdown-btn {
+    height: 36px;
+    width: 135px; }
+
+  .filter-dropdown-menu .filter-form-content .inp-cover {
+    padding: 20px 25px 25px; }
+
+  .filter-dropdown-group .filter-dropdown-menu {
+    width: 380px; }
+
+  .filter-dropdown-group .filter-dropdown-menu {
+    width: 380px;
+    max-width: 90vw; }
+
+  .filter-dropdown-menu .filter-form-content .inp-block {
+    margin-bottom: 15px; }
+
+  .filter-dropdown-menu .filter-form-content .btn-block {
+    padding: 10px 25px; }
+
+  .filter-dropdown-menu .filter-form-content .btn-block .btn {
+    font-size: 14px;
+    min-width: 100px; } }
+@media (max-width: 767px) {
+  .filter-dropdown-menu .filter-form-content .btn-block .btn {
+    font-size: 13px;
+    min-width: 90px;
+    padding: 6px 15px; } }
+@media (max-width: 579px) {
+  .filter-dropdown-menu .react-custom-select .css-13cymwt-control,
+  .filter-dropdown-menu .react-custom-select .css-t3ipsp-control {
+    padding: 2px 15px;
+    height: 44px; }
+
+  .footer-sec .footer-nav-sec .contact-info-block .contact-info-wrapper,
+  .footer-sec .footer-nav-sec .f-nav-ul .f-nav-link {
+    font-size: 14px; } }
+@media (max-width: 479px) {
+  .filter-dropdown-menu .react-custom-select .css-13cymwt-control,
+  .filter-dropdown-menu .react-custom-select .css-t3ipsp-control {
+    height: 41px; } }
 
 /*# sourceMappingURL=common.css.map */
