--- a/css/modal.css
+++ b/css/modal.css
@@ -9,93 +9,129 @@
 /*** laptop with HiDPI (High Dots Per Inch) resolution ***/
 /*** WSXGA (Wide Super Extended Graphics Array) resolution ***/
 /* placeholder mixin */
-/* how to use this variabile*/
-/* .forms{
-   @include placeholder{
-    opacity: 1;color: #a5aeb7;
-  } */
-/* @include transition (.2s ease-out all); */
-/*    @include flexbox();
-    @include justify-content (center);*/
 .modal-backdrop.show {
   background: #01040B;
   opacity: 0.75; }
 
 .custom-modal {
   font-family: "Poppins", sans-serif; }
-  .custom-modal .modal-sm {
-    max-width: 450px !important;
-    width: 100%;
-    margin-left: auto !important;
-    margin-right: auto !important; }
-
-@media (min-width: 1200px) {
-  .custom-modal .modal-xl {
-    max-width: 895px; }
-  .custom-modal .modal-lg {
-    max-width: 1050px; }
-  .custom-modal .modal-sm {
-    max-width: 450px; } }
-.custom-modal .modal-header {
-  border: 0; }
-.custom-modal .btn-close {
-  margin: 2px;
-  padding: 0;
-  margin-left: auto;
-  width: 20px;
-  height: 20px;
-  box-shadow: none;
-  background-image: none;
-  opacity: 1;
-  transition: .3s; }
-  .custom-modal .btn-close img {
-    max-width: 100%; }
-  .custom-modal .btn-close:hover {
-    opacity: .8; }
-.custom-modal .modal-content {
-  border-radius: 16px;
-  background: #FFF; }
-.custom-modal .btn-cover-modal {
-  padding-bottom: 40px;
-  margin-top: 50px; }
-  @media (max-width: 579px) {
-    .custom-modal .btn-cover-modal {
-      padding-bottom: 30px;
-      margin-top: 35px; } }
-  .custom-modal .btn-cover-modal .btn {
-    height: auto;
+  @media (min-width: 1200px) {
+    .custom-modal .modal-xl {
+      max-width: 895px; }
+    .custom-modal .modal-lg {
+      max-width: 1050px; }
+    .custom-modal .modal-sm {
+      max-width: 450px; } }
+  .custom-modal .modal-header {
+    border: 0; }
+  .custom-modal .btn-close {
+    margin: 2px;
+    padding: 0;
+    margin-left: auto;
+    width: 20px;
+    height: 20px;
     box-shadow: none;
-    width: 137px;
-    margin: 0 5px; }
-    @media (max-width: 1679px) {
-      .custom-modal .btn-cover-modal .btn {
-        font-size: 14px;
-        width: 120px;
-        padding: 8px 15px; } }
+    background-image: none;
+    opacity: 1;
+    transition: .3s; }
+    .custom-modal .btn-close img {
+      max-width: 100%; }
+    .custom-modal .btn-close:hover {
+      opacity: .8; }
+  .custom-modal .modal-content {
+    border-radius: 16px;
+    background: #FFF; }
+  .custom-modal .btn-cover-modal {
+    text-align: right;
+    margin-top: 30px; }
     @media (max-width: 579px) {
-      .custom-modal .btn-cover-modal .btn {
-        width: 100px; } }
-  .custom-modal .btn-cover-modal .btn-prmary {
-    color: #fff !important;
-    background-color: #292D32 !important; }
-.custom-modal .modal-title h2 {
-  text-align: center;
-  margin-bottom: 40px;
-  font-size: 24px;
-  font-weight: 600;
-  color: #292D32; }
-  @media (max-width: 1679px) {
-    .custom-modal .modal-title h2 {
-      font-size: 22px;
-      margin-bottom: 30px; } }
-  @media (max-width: 1199px) {
-    .custom-modal .modal-title h2 {
-      font-size: 20px;
-      margin-bottom: 20px; } }
-  @media (max-width: 767px) {
-    .custom-modal .modal-title h2 {
-      font-size: 18px; } }
+      .custom-modal .btn-cover-modal {
+        margin-top: 25px; } }
+    .custom-modal .btn-cover-modal .btn {
+      height: auto;
+      box-shadow: none;
+      width: 137px;
+      margin: 0 5px;
+      transition: .3s; }
+      .custom-modal .btn-cover-modal .btn:hover {
+        opacity: .8; }
+      @media (max-width: 1679px) {
+        .custom-modal .btn-cover-modal .btn {
+          font-size: 14px;
+          width: 120px;
+          padding: 8px 15px; } }
+      @media (max-width: 579px) {
+        .custom-modal .btn-cover-modal .btn {
+          width: 100px; } }
+    .custom-modal .btn-cover-modal .btn-save {
+      background-color: #0DAD4D;
+      color: #fff; }
+    .custom-modal .btn-cover-modal .btn-prmary {
+      color: #fff !important;
+      background-color: #292D32 !important; }
+  .custom-modal .modal-title h2 {
+    margin-bottom: 40px;
+    font-size: 24px;
+    font-weight: 600;
+    color: #292D32; }
+    @media (max-width: 1679px) {
+      .custom-modal .modal-title h2 {
+        font-size: 22px;
+        margin-bottom: 30px; } }
+    @media (max-width: 1199px) {
+      .custom-modal .modal-title h2 {
+        font-size: 20px;
+        margin-bottom: 20px; } }
+    @media (max-width: 767px) {
+      .custom-modal .modal-title h2 {
+        font-size: 18px; } }
+  .custom-modal .inp-block-modal {
+    margin-bottom: 30px; }
+    .custom-modal .inp-block-modal textarea {
+      resize: none;
+      height: 100px; }
+    .custom-modal .inp-block-modal .form-label {
+      color: #697F9B;
+      font-size: 14px;
+      font-family: "Poppins", sans-serif;
+      font-weight: 400;
+      margin-bottom: 5px;
+      display: block; }
+    .custom-modal .inp-block-modal .custom-inp {
+      width: 100%;
+      border-radius: 8px;
+      border: 1px solid #D1D1D7;
+      background: #FFF;
+      font-size: 14px;
+      color: #000;
+      padding: 10px 20px; }
+    .custom-modal .inp-block-modal .custom-inp-disable {
+      background-color: #F8F8F8;
+      border-color: #F8F8F8; }
+    .custom-modal .inp-block-modal .alert-msg {
+      left: 0; }
 
+@media (max-width: 1679px) {
+  .custom-modal .modal-header {
+    padding-bottom: 0; }
+
+  .custom-modal .btn-cover-modal {
+    margin-top: 20px; }
+
+  .custom-modal .inp-block-modal {
+    margin-bottom: 25px; } }
+@media (max-width: 1441px) {
+  .custom-modal .modal-title h2 {
+    margin-bottom: 20px; }
+
+  .custom-modal .inp-block-modal .custom-inp {
+    padding: 8px 18px; } }
+@media (max-width: 579px) {
+  .custom-modal .modal-body {
+    padding-top: 0; }
+
+  .custom-modal .inp-block-modal .custom-inp {
+    padding: 8px 15px; } }
 .conect-wallet {
   display: flex;
   flex-wrap: wrap;
@@ -154,39 +190,6 @@
         justify-content: center;
         overflow: hidden; }
 
-.btn-cover {
-  margin-top: 35px;
-  display: flex;
-  justify-content: center;
-  width: 100%; }
-
-.primary-button {
-  box-shadow: none;
-  max-width: 100%;
-  border-radius: 24px;
-  background: #292D32;
-  border-radius: 27px;
-  width: 240px;
-  height: 48px;
-  padding: 8px 15px;
-  color: #fff;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  border: 1px solid transparent;
-  box-shadow: none;
-  transition: .3s; }
-  .primary-button:hover {
-    background: #F3F4FA;
-    color: #292D32;
-    border-color: #292D32; }
-
-.modal_content .modal-title {
-  text-align: center;
-  font: normal 28px/36px "Poppins", sans-serif;
-  color: #fff; }
-
 @media (min-width: 576px) {
   .custom-modal .modal-medium {
     max-width: 830px; } }
@@ -209,21 +212,6 @@
     margin-bottom: 0; }
   .connect-wallet-info .icon-info {
     margin-right: 10px; }
-
-.dark-bg .modal-content {
-  background-color: #070F2C; }
-.dark-bg .msg-ful-msg p {
-  color: #B3BDE2; }
-
-.privacy-policy {
-  text-align: center;
-  max-width: 350px;
-  margin: 35px auto 0; }
-  .privacy-policy p {
-    font: 300 14px/23px "Poppins", sans-serif;
-    color: #fff; }
-  .privacy-policy a {
-    color: #4798E8; }
 
 .modal-header .btn-close {
   margin-left: auto !important; }
@@ -383,17 +371,19 @@
   .logout-modal-body .btn-cover .btn {
     padding: 8px 15px !important;
     width: 120px; } }
-@media (min-width: 576px) {
-  .mint-modal .modal-dialog {
-    max-width: 550px; } }
-.mint-modal .mint-modal-body {
-  padding: 0 40px; }
+.crate-stake-modal .crate-stake-modal-body {
+  padding: 15px 64px 70px; }
+  @media (max-width: 1679px) {
+    .crate-stake-modal .crate-stake-modal-body {
+      padding: 15px 60px 40px; } }
+  @media (max-width: 1199px) {
+    .crate-stake-modal .crate-stake-modal-body {
+      padding: 0 40px 30px; } }
   @media (max-width: 479px) {
-    .mint-modal .mint-modal-body {
-      padding: 0 15px; } }
-  .mint-modal .mint-modal-body .inp-block .custom-inp {
-    width: 100%; }
-.mint-modal .btn-cover-modal {
-  justify-content: flex-end; }
+    .crate-stake-modal .crate-stake-modal-body {
+      padding: 0 0 15px; } }
+@media (min-width: 767px) and (max-width: 991px) {
+  .crate-stake-modal .modal-dialog {
+    max-width: 700px; } }
 
 /*# sourceMappingURL=modal.css.map */
