--- a/css/common.css
+++ b/css/common.css
@@ -11,34 +11,44 @@
 /* placeholder mixin */
 ul, ol {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+}
 
 .body-wrapper {
   font-family: "Poppins", sans-serif;
   display: flex;
-  min-height: 100vh; }
-  @media (max-width: 991px) {
-    .body-wrapper {
-      flex-direction: column; } }
-  .body-wrapper .nav-block {
-    flex: 0 0 auto;
-    position: relative;
-    z-index: 1001; }
-  .body-wrapper .content-block-outer {
-    background: #F7F7FC;
-    flex: 1 1 auto;
-    transition: .3s;
-    max-width: calc(100% - 300px); }
-  @media (min-width: 992px) {
-    .body-wrapper.nav-collapse .content-block-outer {
-      max-width: calc(100% - 95px); } }
+  min-height: 100vh;
+}
+@media (max-width: 991px) {
+  .body-wrapper {
+    flex-direction: column;
+  }
+}
+.body-wrapper .nav-block {
+  flex: 0 0 auto;
+  position: relative;
+  z-index: 1001;
+}
+.body-wrapper .content-block-outer {
+  background: #F7F7FC;
+  flex: 1 1 auto;
+  transition: 0.3s;
+  max-width: calc(100% - 300px);
+}
+@media (min-width: 992px) {
+  .body-wrapper.nav-collapse .content-block-outer {
+    max-width: calc(100% - 95px);
+  }
+}
 
 .shadow-bg {
   background-color: #fff;
-  box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.04); }
+  box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.04);
+}
 
 .body-content-outer {
-  padding: 15px; }
+  padding: 15px;
+}
 
 .btn-primary {
   background-color: #292D32;
@@ -46,10 +56,12 @@ ul, ol {
   color: #fff;
   font-weight: 500;
   padding: 10px 15px;
-  transition: .3s; }
-  .btn-primary:hover {
-    color: #fff;
-    opacity: .8; }
+  transition: 0.3s;
+}
+.btn-primary:hover {
+  color: #fff;
+  opacity: 0.8;
+}
 
 .btn-border {
   background-color: #fff;
@@ -57,10 +69,12 @@ ul, ol {
   color: #292D32;
   font-weight: 500;
   padding: 10px 15px;
-  transition: .3s;
-  border: solid 1px #292D32 !important; }
-  .btn-border:hover {
-    opacity: .8; }
+  transition: 0.3s;
+  border: solid 1px #292D32 !important;
+}
+.btn-border:hover {
+  opacity: 0.8;
+}
 
 .btn-def {
   text-decoration: none;
@@ -69,20 +83,25 @@ ul, ol {
   color: #292D32;
   font-weight: 500;
   padding: 10px 15px;
-  transition: .3s ease-in-out;
-  text-align: center; }
+  transition: 0.3s ease-in-out;
+  text-align: center;
+}
 
 .custom-scroll::-webkit-scrollbar {
   width: 5px;
-  height: 5px; }
+  height: 5px;
+}
 .custom-scroll::-webkit-scrollbar-track {
   border-radius: 3px;
-  background: #f8f6fa; }
+  background: #f8f6fa;
+}
 .custom-scroll::-webkit-scrollbar-thumb {
   background: #ECDFF5;
-  border-radius: 3px; }
+  border-radius: 3px;
+}
 .custom-scroll::-webkit-scrollbar-thumb:hover {
-  background: #dfc6f1; }
+  background: #dfc6f1;
+}
 
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
@@ -90,72 +109,90 @@ input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
   -webkit-background-clip: text;
   transition: background-color 5000s ease-in-out 0s;
-  box-shadow: inset 0 0 20px 20px #fff; }
+  box-shadow: inset 0 0 20px 20px #fff;
+}
 
 button {
   outline: none;
   box-shadow: none;
-  border: none; }
+  border: none;
+}
 
 select, input {
   outline: none;
-  box-shadow: none; }
+  box-shadow: none;
+}
 
 .btn-check:checked + .btn, .btn:first-child:active, :not(.btn-check) + .btn:active {
   color: inherit;
   background-color: transparent;
-  border: inherit; }
+  border: inherit;
+}
 
 .btn-back {
   padding-left: 0;
   box-shadow: none;
-  transition: .3s;
+  transition: 0.3s;
   outline: none !important;
   border: none !important;
-  box-shadow: none !important; }
-  .btn-back:hover {
-    transform: translateX(-3px); }
+  box-shadow: none !important;
+}
+.btn-back:hover {
+  transform: translateX(-3px);
+}
 
 button {
-  box-shadow: none !important; }
+  box-shadow: none !important;
+}
 
 .filter-wrapper {
   border-radius: 8px;
   padding: 13px 25px;
   background: #fff;
-  margin-bottom: 20px; }
-  .filter-wrapper .filter-nav-btn {
-    min-width: 120px;
-    padding: 10px 15px;
-    font-size: 14px;
-    border-radius: 20px;
-    border: 1px solid #E3E4F3;
-    background: #fff;
-    color: #7F97B5;
-    transition: .3s;
-    margin-right: 15px; }
-    .filter-wrapper .filter-nav-btn:last-child {
-      margin-right: 0; }
-    .filter-wrapper .filter-nav-btn:hover, .filter-wrapper .filter-nav-btn.active {
-      border: 0.9px solid #292D32;
-      background: #F7F7FC; }
-    .filter-wrapper .filter-nav-btn.active {
-      font-weight: 500;
-      color: #292D32; }
+  margin-bottom: 20px;
+}
+.filter-wrapper .filter-nav-btn {
+  min-width: 120px;
+  padding: 10px 15px;
+  font-size: 14px;
+  border-radius: 20px;
+  border: 1px solid #E3E4F3;
+  background: #fff;
+  color: #7F97B5;
+  transition: 0.3s;
+  margin-right: 15px;
+}
+.filter-wrapper .filter-nav-btn:last-child {
+  margin-right: 0;
+}
+.filter-wrapper .filter-nav-btn:hover, .filter-wrapper .filter-nav-btn.active {
+  border: 0.9px solid #292D32;
+  background: #F7F7FC;
+}
+.filter-wrapper .filter-nav-btn.active {
+  font-weight: 500;
+  color: #292D32;
+}
 
 @media (max-width: 1679px) {
   .filter-wrapper .filter-nav-btn {
     min-width: 110px;
-    padding: 7px 15px; } }
+    padding: 7px 15px;
+  }
+}
 @media (max-width: 1199px) {
   .filter-wrapper {
-    padding: 13px 15px; }
-
+    padding: 13px 15px;
+  }
   .filter-wrapper .filter-nav-btn {
-    min-width: 90px; } }
+    min-width: 90px;
+  }
+}
 @media (max-width: 767px) {
   .filter-wrapper .filter-nav-btn {
     min-width: 80px;
-    font-size: 13px; } }
+    font-size: 13px;
+  }
+}
 
 /*# sourceMappingURL=common.css.map */
