--- a/css/header.css
+++ b/css/header.css
@@ -14,239 +14,283 @@
   justify-content: space-between;
   align-items: center;
   padding: 20px;
-  min-height: 85px; }
-  .header-wrapper .header-title-block .header-title {
-    margin-bottom: 0;
-    color: #292D32;
-    font-size: 16px;
-    font-weight: 700; }
-  .header-wrapper .header-title-block .live-active {
-    display: inline-block;
-    white-space: unset;
-    max-width: none;
-    opacity: 1 !important; }
-    .header-wrapper .header-title-block .live-active .status {
-      width: 8px;
-      height: 8px;
-      border-radius: 50%;
-      display: inline-block;
-      background-color: #009518;
-      margin-right: 10px; }
-  .header-wrapper .right-block {
-    display: flex;
-    align-items: center; }
-    .header-wrapper .right-block .buy-btn {
-      flex-shrink: 0;
-      max-width: none;
-      background-color: #292D32;
-      color: #fff;
-      width: 185px;
-      margin-right: 15px; }
-      @media (max-width: 1200px) {
-        .header-wrapper .right-block .buy-btn .buy-label {
-          display: none; } }
-      .header-wrapper .right-block .buy-btn .cart-mob {
-        display: none; }
-        @media (max-width: 1200px) {
-          .header-wrapper .right-block .buy-btn .cart-mob {
-            display: block; } }
-      @media (max-width: 1200px) {
-        .header-wrapper .right-block .buy-btn {
-          padding: 0 !important;
-          border: none;
-          background: none; } }
-  .header-wrapper .info-block {
-    font-size: 16px;
-    color: #292D32;
-    margin-right: 40px; }
-    .header-wrapper .info-block .info-label {
-      font-weight: 600; }
-    .header-wrapper .info-block .info-val {
-      margin-left: 10px;
-      font-weight: 500; }
-    .header-wrapper .info-block .info-val-end {
-      margin-left: 40px; }
-  .header-wrapper .wallet-btn-cover {
-    position: relative; }
-    .header-wrapper .wallet-btn-cover .wallet-btn-copy {
-      position: absolute;
-      right: 8px;
-      top: 0;
-      bottom: 0;
-      margin: auto;
-      background-color: #F0F0F8; }
-  .header-wrapper .wallet-btn {
-    border-radius: 20px;
-    border: 1px solid #000;
-    background: #fff;
-    padding: 8px 30px;
-    font-size: 14px;
-    transition: .3s;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    max-width: 200px; }
-    .header-wrapper .wallet-btn:hover {
-      opacity: .8; }
-  .header-wrapper .login-btn {
-    margin-left: 15px;
-    border-radius: 20px;
+  min-height: 85px;
+}
+.header-wrapper .header-title-block .header-title {
+  margin-bottom: 0;
+  color: #292D32;
+  font-size: 16px;
+  font-weight: 700;
+}
+.header-wrapper .header-title-block .live-active {
+  display: inline-block;
+  white-space: unset;
+  max-width: none;
+  opacity: 1 !important;
+}
+.header-wrapper .header-title-block .live-active .status {
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  display: inline-block;
+  background-color: #009518;
+  margin-right: 10px;
+}
+.header-wrapper .right-block {
+  display: flex;
+  align-items: center;
+}
+.header-wrapper .right-block .buy-btn {
+  flex-shrink: 0;
+  max-width: none;
+  background-color: #292D32;
+  color: #fff;
+  width: 185px;
+  margin-right: 15px;
+}
+@media (max-width: 1200px) {
+  .header-wrapper .right-block .buy-btn .buy-label {
+    display: none;
+  }
+}
+.header-wrapper .right-block .buy-btn .cart-mob {
+  display: none;
+}
+@media (max-width: 1200px) {
+  .header-wrapper .right-block .buy-btn .cart-mob {
+    display: block;
+  }
+}
+@media (max-width: 1200px) {
+  .header-wrapper .right-block .buy-btn {
+    padding: 0 !important;
     border: none;
-    border: solid 1px #F3F4FA;
-    background: #F3F4FA;
-    padding: 8px 30px;
-    transition: .3s;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    color: #292D32;
-    font-size: 14px; }
-    .header-wrapper .login-btn img {
-      margin-left: 25px; }
-    .header-wrapper .login-btn:hover {
-      opacity: .8; }
-  .header-wrapper .prof-avt {
-    margin-left: 25px; }
-    .header-wrapper .prof-avt img {
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      overflow: hidden;
-      object-fit: cover; }
+    background: none;
+  }
+}
+.header-wrapper .info-block {
+  font-size: 16px;
+  color: #292D32;
+  margin-right: 40px;
+}
+.header-wrapper .info-block .info-label {
+  font-weight: 600;
+}
+.header-wrapper .info-block .info-val {
+  margin-left: 10px;
+  font-weight: 500;
+}
+.header-wrapper .info-block .info-val-end {
+  margin-left: 40px;
+}
+.header-wrapper .wallet-btn-cover {
+  position: relative;
+}
+.header-wrapper .wallet-btn-cover .wallet-btn-copy {
+  position: absolute;
+  right: 8px;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  background-color: #F0F0F8;
+}
+.header-wrapper .wallet-btn {
+  border-radius: 20px;
+  border: 1px solid #000;
+  background: #fff;
+  padding: 8px 30px;
+  font-size: 14px;
+  transition: 0.3s;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 200px;
+}
+.header-wrapper .wallet-btn:hover {
+  opacity: 0.8;
+}
+.header-wrapper .login-btn {
+  margin-left: 15px;
+  border-radius: 20px;
+  border: none;
+  border: solid 1px #F3F4FA;
+  background: #F3F4FA;
+  padding: 8px 30px;
+  transition: 0.3s;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  color: #292D32;
+  font-size: 14px;
+}
+.header-wrapper .login-btn img {
+  margin-left: 25px;
+}
+.header-wrapper .login-btn:hover {
+  opacity: 0.8;
+}
+.header-wrapper .prof-avt {
+  margin-left: 25px;
+}
+.header-wrapper .prof-avt img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  overflow: hidden;
+  object-fit: cover;
+}
 
 .wallet-btn-cover {
-  position: relative; }
-  .wallet-btn-cover .wallet-btn-copy {
-    position: absolute;
-    right: 8px;
-    top: 0;
-    bottom: 0;
-    margin: auto;
-    background-color: #F0F0F8;
-    border: none;
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    line-height: 0; }
-  .wallet-btn-cover .wallet-btn {
-    min-width: 150px; }
+  position: relative;
+}
+.wallet-btn-cover .wallet-btn-copy {
+  position: absolute;
+  right: 8px;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  background-color: #F0F0F8;
+  border: none;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  line-height: 0;
+}
+.wallet-btn-cover .wallet-btn {
+  min-width: 150px;
+}
 
 @media (max-width: 1679px) {
   .header-wrapper .login-btn img {
-    margin-left: 15px; }
-
+    margin-left: 15px;
+  }
   .header-wrapper .info-block {
     font-size: 15px;
-    margin-right: 25px; }
-
+    margin-right: 25px;
+  }
   .header-wrapper .info-block .info-val-end {
-    margin-left: 30px; }
-
+    margin-left: 30px;
+  }
   .header-wrapper .right-block .buy-btn {
-    width: 150px; }
-
+    width: 150px;
+  }
   .header-wrapper .wallet-btn, .header-wrapper .login-btn, .header-wrapper .right-block .buy-btn {
     font-size: 13px;
-    padding: 8px 20px; }
-
+    padding: 8px 20px;
+  }
   .header-wrapper .prof-avt img {
     width: 36px;
-    height: 36px; }
-
+    height: 36px;
+  }
   .header-wrapper {
     padding: 15px;
-    min-height: 70px; }
-
+    min-height: 70px;
+  }
   .nav-block .nav-footer-block .welcome-msg {
-    font-size: 15px; }
-
+    font-size: 15px;
+  }
   .filter-wrapper {
-    padding: 13px 20px; } }
+    padding: 13px 20px;
+  }
+}
 @media (max-width: 1481px) {
   .nav-block .nav-footer-block .welcome-msg {
     font-size: 14px;
-    max-width: 200px; }
-
+    max-width: 200px;
+  }
   .header-wrapper .wallet-btn, .header-wrapper .login-btn {
-    padding: 8px 16px; }
-
+    padding: 8px 16px;
+  }
   .header-wrapper .right-block .buy-btn {
-    margin-right: 8px; }
-
+    margin-right: 8px;
+  }
   .header-wrapper .info-block .info-val {
-    margin-left: 6px; }
-
+    margin-left: 6px;
+  }
   .header-wrapper .login-btn {
-    margin-left: 8px; }
-
+    margin-left: 8px;
+  }
   .header-wrapper .login-btn img {
-    margin-left: 10px; }
-
+    margin-left: 10px;
+  }
   .header-wrapper .info-block {
     font-size: 14px;
-    margin-right: 20px; }
-
+    margin-right: 20px;
+  }
   .header-wrapper .info-block .info-val-end {
-    margin-left: 20px; }
-
+    margin-left: 20px;
+  }
   .header-wrapper .right-block .buy-btn {
-    width: auto; } }
+    width: auto;
+  }
+}
 @media (max-width: 1199px) {
   .header-wrapper .header-title-block .live-active .status {
-    margin-right: 5px; }
-
+    margin-right: 5px;
+  }
   .header-wrapper .info-block {
     font-size: 13px;
-    margin-right: 10px; }
-
+    margin-right: 10px;
+  }
   .header-wrapper .info-block .info-val-end {
-    margin-left: 15px; }
-
+    margin-left: 15px;
+  }
   .header-wrapper .login-btn img {
-    margin-left: 5px; }
-
+    margin-left: 5px;
+  }
   .header-wrapper .right-block .buy-btn {
-    margin-right: 5px; }
-
+    margin-right: 5px;
+  }
   .header-wrapper .login-btn {
-    margin-left: 5px; }
-
+    margin-left: 5px;
+  }
   .header-wrapper .wallet-btn, .header-wrapper .login-btn {
-    padding: 8px 12px; }
-
+    padding: 8px 12px;
+  }
   .header-wrapper .header-title-block {
     flex: 1 1 auto;
-    padding-right: 15px; } }
+    padding-right: 15px;
+  }
+}
 @media (max-width: 991px) {
   .header-wrapper .wallet-btn, .header-wrapper .login-btn {
-    padding: 6px 15px; }
-
+    padding: 6px 15px;
+  }
   .header-wrapper .prof-avt {
-    margin-left: 20px; } }
+    margin-left: 20px;
+  }
+}
 @media (max-width: 767px) {
   .header-wrapper .header-btn-web, .wallet-btn-cover-web {
-    display: none; } }
+    display: none;
+  }
+}
 @media (max-width: 479px) {
   .header-wrapper {
-    flex-wrap: wrap; }
-
+    flex-wrap: wrap;
+  }
   .header-wrapper .right-block {
     width: 100%;
-    justify-content: space-between; }
-
+    justify-content: space-between;
+  }
   .header-wrapper .info-block {
-    padding-top: 4px; } }
+    padding-top: 4px;
+  }
+}
 @media (max-width: 350px) {
   .filter-wrapper .block-left {
-    width: 100%; }
-
+    width: 100%;
+  }
   .filter-wrapper {
-    padding: 13px 10px; }
-
+    padding: 13px 10px;
+  }
   .filter-wrapper .filter-nav-btn {
     margin-right: 5px;
-    flex-grow: 1; }
-    .filter-wrapper .filter-nav-btn:last-child {
-      margin-right: 0; } }
+    flex-grow: 1;
+  }
+  .filter-wrapper .filter-nav-btn:last-child {
+    margin-right: 0;
+  }
+}
 
 /*# sourceMappingURL=header.css.map */
